ethos ref duplicate link update added